--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,7 +4,7 @@ on:
     branches: [ main ]
   workflow_dispatch:
 jobs:
-  build:
+  run-all-tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
