--- a/.github/workflows/build-container-img.yml
+++ b/.github/workflows/build-container-img.yml
@@ -1,7 +1,8 @@
 name: Publish Container Image
 on:  
-  release: 
-    types: created
+  push:
+    tags:
+      - '*'
   workflow_dispatch:
 jobs:
   build:
