--- a/.github/workflows/skip-behavior.yml
+++ b/.github/workflows/skip-behavior.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
     - run: echo "::warning::three"
   four:
+    if: |
+      !cancelled()
     needs: [three]
     runs-on: ubuntu-latest
     steps:
