--- a/.github/workflows/skip-behavior.yml
+++ b/.github/workflows/skip-behavior.yml
@@ -13,14 +13,14 @@ jobs:
     steps:
     - run: echo "::warning::one"
   two:
-    if: |
-      'true' != 'true'
     runs-on: ubuntu-latest
+    env:
+      SKIP_THIS: 'true'
     steps:
-    - run: echo "::warning::two"
+    - run: |
+      [ "${{ env.SKIP_THIS }}" == "true" ] && exit 0
+      echo "::warning::two"
   three:
-    if: |
-      !cancelled()
     needs: [one, two]
     runs-on: ubuntu-latest
     steps:
@@ -32,3 +32,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - run: echo "::warning::four"
+
+  # one:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - run: echo "::warning::one"
+  # two:
+  #   if: |
+  #     'true' != 'true'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - run: echo "::warning::two"
+  # three:
+  #   if: |
+  #     !cancelled()
+  #   needs: [one, two]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - run: echo "::warning::three"
+  # four:
+  #   if: |
+  #     !cancelled()
+  #   needs: [three]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - run: echo "::warning::four"
