--- a/.github/workflows/skip-behavior.yml
+++ b/.github/workflows/skip-behavior.yml
@@ -22,11 +22,15 @@ jobs:
         echo "::warning::two"
   three:
     needs: [one, two]
+    if: |
+      !cancelled() && !failure()
     runs-on: ubuntu-latest
     steps:
     - run: echo "::warning::three"
   four:
     needs: [three]
+    if: |
+      !cancelled() && !failure()
     runs-on: ubuntu-latest
     steps:
     - run: echo "::warning::four"
