--- a/.github/workflows/skip-behavior.yml
+++ b/.github/workflows/skip-behavior.yml
@@ -14,7 +14,8 @@ jobs:
     - run: echo "::warning::one"
   two:
     runs-on: ubuntu-latest
-    if: true()
+    if: |
+      true()
     env:
       SKIP_THIS: 'true'
     steps:
