--- a/.github/workflows/skip-behavior.yml
+++ b/.github/workflows/skip-behavior.yml
@@ -24,7 +24,7 @@ jobs:
   three:
     needs: [one, two]
     if: |
-      !cancelled() && !failure() && false
+      !cancelled() && !failure()
     runs-on: ubuntu-latest
     steps:
     - run: echo "::warning::three"
