--- a/.github/workflows/skip-behavior.yml
+++ b/.github/workflows/skip-behavior.yml
@@ -19,8 +19,8 @@ jobs:
     steps:
     - run: echo "::warning::two"
   three:
-    if: |
-      !cancelled()
+    # if: |
+      # !cancelled()
     needs: [one, two]
     runs-on: ubuntu-latest
     steps:
