fail fast and multiline

--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         index: [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]
-      fail-fast: false
+      fail-fast: true
       max-parallel: 4
     runs-on: ubuntu-latest
     steps:
@@ -19,7 +19,7 @@ jobs:
       env:
         JOB_IDX: ${{ matrix.index }}
         EVENT_OBJ: ${{ toJSON(github.event) }}
-      run: 
+      run: |
         echo "Hello from matrix job "${JOB_IDX}!"
         jq <<< "${EVENT_OBJ}"
         sleep 4
