--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -3,6 +3,9 @@ on:
   pull_request:
     branches: [main]
   workflow_dispatch:
+env:
+  SOME_VALUE: 'foo'
+  EMPTY_VALUE: ''
 jobs:
   run-all-tests:
     runs-on: ubuntu-latest
@@ -10,4 +13,15 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run all tests.
         run: ./scripts/run-tests.sh
+      - name: check ternary
+        env:
+          SET_VALUE: ${{ env.SOME_VALUE && env.SOME_VALUE || 'unset' }}
+          UNSET_VALUE:  ${{ env.EMPTY_VALUE && env.EMPTY_VALUE || 'unset' }}
+          NO_TERNARY_SET: ${{ env.SOME_VALUE || 'unset' }}
+          NO_TERNARY_UNSET: ${{ env.SOME_VALUE || 'unset' }}
+        run: |
+          echo "SET_VALUE => ${SET_VALUE}"
+          echo "UNSET_VALUE => ${UNSET_VALUE}"
+          echo "NO_TERNARY_SET_VALUE => ${NO_TERNARY_SET}"
+          echo "NO_TERNARY_UNSET_VALUE => ${NO_TERNARY_UNSET}"
 
