--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -26,7 +26,7 @@ jobs:
           echo "NO_TERNARY_UNSET_VALUE => ${NO_TERNARY_UNSET}"
       - name: set-true
         id: set-true
-        uses: actions/github-script@latest
+        uses: actions/github-script@v8
         with:
           script: |
             let foo = 'foo'
